correct CheckoutPage layout on smaller screens caused by excessive button margins; add 'active' and 'focus' states to buttons & bubbles

--- a/src/components/checkout/CheckoutItem.scss
+++ b/src/components/checkout/CheckoutItem.scss
@@ -28,7 +28,9 @@
         line-height: 1rem;
         cursor: pointer;
 
-        &:hover {
+        &:hover,
+        &:focus,
+        &:active {
             background-color: $accentColorOverlay-1;
         }
     }
