--- a/src/components/common/CustomButton.scss
+++ b/src/components/common/CustomButton.scss
@@ -22,7 +22,9 @@
         min-width: 13rem;
     }
 
-    &:hover {
+    &:hover,
+    &:focus,
+    &:active {
         background-color: $accentColorOverlay-1;
         color: $lightColor;
         font-weight: 400;
@@ -33,7 +35,9 @@
         background-color: $lightColor;
         color: $darkColor;
 
-        &:hover {
+        &:hover,
+        &:focus,
+        &:active {
             border: none;
             background-color: $accentColorOverlay-1;
             color: $lightColor;
