--- a/src/components/pages/CheckoutPage.scss
+++ b/src/components/pages/CheckoutPage.scss
@@ -6,7 +6,7 @@
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
-    padding: 1rem 2rem 0;
+    padding: 1rem 1rem 0;
     @media only screen and (min-width: $breakMedium) {
         height: calc(100vh - 4rem);
         padding: 1rem 5rem 0;
@@ -50,8 +50,20 @@
 
     &-buttons {
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         max-width: 100vw;
+
+        .custom-button {
+            margin: 0;
+        }
+
+        @media only screen and (min-width: $breakMedium) {
+            justify-content: center;
+
+            .custom-button {
+                margin: 1rem 1rem 2rem;
+            }
+        }
     }
 
     .cart-empty-message {
